--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.0",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
@@ -22,10 +23,9 @@
     "@capacitor/core": "2.4.7",
     "@ionic-native/native-page-transitions": "^5.32.1",
     "@ionic/angular": "^5.5.2",
-    "angularfire2": "^5.4.2",
-    "firebase": "^8.6.1",
     "moment": "^2.29.1",
-    "rxjs": "^5.4.0",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
