--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/core": "2.4.7",
     "@ionic-native/native-page-transitions": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "firebase": "^8.6.1",
     "moment": "^2.29.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
