--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.0",
     "@ionic-native/core": "^5.33.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-ionic": "5.4.7",
     "firebase": "^8.6.1",
     "g": "^2.0.1",
     "moment": "^2.29.1",
