--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "~11.2.0",
     "@ionic-native/core": "^5.33.1",
     "@ionic/angular": "^5.5.2",
+    "@types/jquery": "^3.5.5",
     "cordova-plugin-ionic": "5.4.7",
     "firebase": "^8.6.1",
     "g": "^2.0.1",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
